# wgbs_tools

./: Dockerfile  LICENSE.md  README.md  bam2pat.py  bamAddMethylData.py  bed2beta.py  beta2bed.py  beta2bw.py  beta_cov.py  beta_to_450k.py  beta_to_blocks.py  beta_vis.py  betas_to_table.py  bimodal_segment_finder.py  bimodal_statistics.py  cmp_betas.py  convert.py  cview.py  dmb.py  frag_len.py  genomic_region.py  homog.py  index_wgbs.py  init_genome_ref_wgbs.py  merge.py  mix_pat.py  pat2beta.py  pat_vis.py  pyproject.toml  segment_betas.py  segment_pats.py  segmentor_client.py  setup.py  update_pat_blocks_with_boundaries.py  update_pat_blocks_with_genomic_region.py  utils_wgbs.py  view.py  vis.py  wgbs_tools.py  wgbstools
.github/workflows/: build-docker.yaml
docs/: README.md  bed_format.md  beta_format.md  index.md  init_genome_ref_wgbs.md  pat_format.md  unq_format.md  view.md
pipeline_wgbs/: CMakeLists.txt  match_maker  match_maker.cpp  patter  patter.cpp  patter.h
pipeline_wgbs/test/: run_test.py  test.bam.bai
src/: collapse_pat.pl  extend_blocks.sh  view_beta.sh  view_lbeta.sh
src/cpg2bed/: add_loci.cpp  add_loci.h  cpg_dict.cpp  cpg_dict.h
src/cview/: Makefile  cview  cview.cpp  cview.h  extend_blocks.sh  main.cpp  test.sh
src/homog/: Makefile  a.bed  ro  (+5 more)
supplemental/: find_markers_config.txt  find_markers_defaults.txt  hg19.annotations.bed.gz.tbi
tutorial/: .HOWTO.swo  .HOWTO.swp  .README.md.swp  .commands.txt.swp  Lung_STL002.small.bam.bai  Pancreas_STL002.small.bam  README.md  Sigmoid_Colon_STL003.small.bam  Sigmoid_Colon_STL003.small.bam.bai
(+94 files in other folders)
